--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-/* style.css */
-/* Подключение шрифтов */
+/* Подключение нормализации и шрифтов */
+@import "normalize.css";
 @import "fonts.css";
 
 /* Базовые стили */
@@ -7,7 +7,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
 }
 
 body {
